# project-distributed-calculus

./: .gitignore  README.md  docker-compose.yaml  release.sh  set_host_ip.sh
.github/workflows/: release.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  counter.rs  main.rs  small_serv.rs  socket_manager.rs
frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf  style.css
frontend/src/: agent_calculator.rs  endpoints.rs  id_manager.rs  lib.rs  svg_manager.rs
