[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.21"
tokio-tungstenite = "0.17.2"
flume = "0.10.14"