[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
indexmap = "1.9.1"
gloo-worker = "0.2.0"
gloo-console = "0.2.1"
gloo-net = "0.2.3"
num = "0.4.0"
serde = { version="1.0.143", features = ["derive"] }
serde_json = "1.0.83"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.32"
gloo-timers = "0.2.4"
wasm_thread = "0.2.0"